The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user.

5th September
- USER (Dev) - Stages that need referencing no longer auto-ref when connected. Instead the user must manually select Tools > References Stages from the menu.

24th August
- USER (Dev) - Cutting start point is set to NaN on startup and when a new sample created. System will not cut until it's set. 
- USER (Dev) - Default sample name is now the microscope ID. 
- USER (Dev) - Warning issued if the tile size in BakingTray does not match that in ScanImage.
- POWERUSER (Dev) - The new SYSTEM.defaultSaveOath setting in the systemSettings.yml allows you to set the default path to which data should be saved. **It is suggested you set this!** It will reduce user errors and training time. <---

11th August
- USER (Dev) - Add the ability move Z stage up and down with R and F in addition to Q and E. 
6th August 
Minor bug fixes and doc changes
- USER (Dev) - Compatibility bug fixes for SI Basic 2021.


1st July
- USER (Dev) - Improve behavior of zoom buttons and box buttons in acq view. Includes bug fixes.
- USER (Dev) - The ROI that was last drawn by the user is painted temporarily onto the imaged area. 

21st June 2021
- Show relative motion increment in slicing debug message and correctly display the current z depth (bugfix)


18th June 2021
- USER (Dev) - If PMT Auto-On is enabled, the acquisition will not proceed.

17th June 2021
- USER (Dev) - Bugfix: Correct slow start on Bake
- USER (Dev) - New default settings in system settings file are now automatically added to the live file. A backup of the original live file is created.
- New option added to system settings file: defaultYcutPos. This allows the vibratime to be mounted off-centre
 with respect to objective. Useful for some water baths.
- USER (Dev) - Option to set dominant stage tiling direction. To date X was dominant. Now Y is default. NOTE: User should also update StitchIt!
