@@ -8,6 +8,8 @@ The tag "DEVELOPER" indicates a change that significantly impacts the code but i
 
 5th September
 - USER (Dev) - Stages that need referencing no longer auto-ref when connected. Instead the user must manually select Tools > References Stages from the menu.
+- DEVELOPER (Dev) - Zaber linear stages can be used as X/Y. e.g. X-LRM100A-DE51 are verified to work.
+- DEVELOPER (Dev) - Option to set a wait time that scales with distance moved during tile scan instead of waiting for stage to report motion completion. To use this, set fixedStageMotionTimeConstant in SIBT_settings.yml to a positive number or tweak hBT.scanner.settings.hardware.fixedStageMotionTimeConstant on an instance of a BT class. The latter will not be saved for future sessions. Zero means that BakingTray will wait for the motion controller to indicate it has completed a motion. 0.05 means BakingTray will wait 0.05 s per mm. So for a 2 mm motion there would be a 0.1 s wait. Note that there may be some additional delay on top of this due to ScanImage buffering time between frames. This is a fixed offset. So it could be that for, say, 1 mm motions no additional delay is really needed. This is an EXPERIMENTAL feature and may need further development. 
 
 24th August
 - USER (Dev) - Cutting start point is set to NaN on startup and when a new sample created. System will not cut until it's set. 
